--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5000
 TOKENKEY ='secret-key'
-MONGO_URL='mongodb://localhost:27017/TheCha'
+MONGO_URL='mongodb://test:test@localhost:27017/TheCha'
