--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app"
+    "start": "nodemon app",
+    "prettify": "prettier --write *.js **/*.js"
   },
   "repository": {
     "type": "git",
@@ -26,5 +27,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.2",
     "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "prettier": "^2.5.1"
   }
 }
